<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="ru.medeng.mobile.ui.ProductFragment"
        android:label="@string/product_title"
        tools:layout="@layout/fragment_list" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="ru.medeng.mobile.ui.user.AccountFragment"
        android:label="@string/account_title"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/navigation_list"
        android:name="ru.medeng.mobile.ui.OrderListFragment"
        android:label="@string/orders_title"
        tools:layout="@layout/fragment_order_list" />
</navigation>