<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="@dimen/customer_info_padding_horizontal"
    android:paddingEnd="@dimen/customer_info_padding_horizontal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_label"
        android:textSize="@dimen/edit_text_hint_text" />
    <EditText
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/edit_text_divider"
        android:autofillHints=""
        android:hint="@string/login_label"
        android:inputType="textPersonName|phone|textEmailAddress"
        android:textSize="@dimen/edit_text_value" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_label"
        android:textSize="@dimen/edit_text_hint_text" />
    <EditText
        android:id="@id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/edit_text_divider"
        android:autofillHints=""
        android:hint="@string/password_label"
        android:inputType="textPassword"
        android:textSize="@dimen/edit_text_value" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/last_name_label"
        android:textSize="@dimen/edit_text_hint_text"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/last_name"
        android:textSize="@dimen/edit_text_value"
        android:layout_marginBottom="@dimen/edit_text_divider"
        android:autofillHints=""
        android:hint="@string/last_name_label"
        android:inputType="textPersonName"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_name_label"
        android:textSize="@dimen/edit_text_hint_text"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/first_name"
        android:textSize="@dimen/edit_text_value"
        android:layout_marginBottom="@dimen/edit_text_divider"
        android:autofillHints=""
        android:hint="@string/first_name_label"
        android:inputType="textPersonName"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/patronymic_label"
        android:textSize="@dimen/edit_text_hint_text"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/patronymic"
        android:textSize="@dimen/edit_text_value"
        android:layout_marginBottom="@dimen/edit_text_divider"
        android:autofillHints=""
        android:hint="@string/patronymic_label"
        android:inputType="textPersonName"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone_label"
        android:textSize="@dimen/edit_text_hint_text"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/phone"
        android:textSize="@dimen/edit_text_value"
        android:layout_marginBottom="@dimen/edit_text_divider"
        android:autofillHints=""
        android:hint="@string/phone_label"
        android:inputType="phone"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_label"
        android:textSize="@dimen/edit_text_hint_text"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:textSize="@dimen/edit_text_value"
        android:layout_marginBottom="@dimen/edit_text_divider"
        android:autofillHints=""
        android:hint="@string/email_label"
        android:inputType="textEmailAddress"/>

</LinearLayout>