<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ShipmentFragment">

    <LinearLayout
        android:id="@+id/current_shipment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:padding="@dimen/shipment_padding_vertical"
        android:paddingStart="@dimen/shipment_padding_horizontal"
        android:paddingEnd="@dimen/shipment_padding_horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_label"
            android:textSize="@dimen/edit_text_hint_text"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/product"
            android:layout_marginBottom="@dimen/edit_text_divider"
            android:autofillHints=""/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/count_label"
            android:textSize="@dimen/edit_text_hint_text"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/shipment_count"
            android:textSize="@dimen/edit_text_value"
            android:layout_marginBottom="@dimen/edit_text_divider"
            android:autofillHints=""
            android:hint="@string/count_label"
            android:inputType="numberDecimal"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/shipment_list"
        android:layout_below="@id/current_shipment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        android:src="@drawable/done"
        android:contentDescription="@string/save_label" />

</RelativeLayout>